--- a/sonic.cabal
+++ b/sonic.cabal
@@ -70,6 +70,7 @@ library
     , text            >=2.0.0    && <3.0.0
     , split           >=0.2.0.0  && <0.2.4.0
     , time            >=1.10.0   && <1.13.0
+    , deepseq         >=1.1.0.0 && <1.5.0.0
 
 executable sonic-example
   main-is:            Main.hs
@@ -113,6 +114,7 @@ executable sonic-example
     , text            >=2.0.0    && <3.0.0
     , split           >=0.2.0.0  && <0.2.4.0
     , time            >=1.10.0   && <1.13.0
+    , deepseq         >=1.1.0.0 && <1.5.0.0
 
 test-suite sonic-test
   type:               exitcode-stdio-1.0
@@ -160,6 +162,7 @@ test-suite sonic-test
     , tasty-hunit       >=0.10.0.2 && <0.11
     , tasty-quickcheck  >=0.10.0.0 && <0.11
     , vector            >=0.12.0.0 && <0.13
+    , deepseq         >=1.1.0.0 && <1.5.0.0
 
 benchmark sonic-benchmarks
   type:               exitcode-stdio-1.0
@@ -200,3 +203,4 @@ benchmark sonic-benchmarks
     , tasty-hunit       >=0.10.0.0 && <0.11
     , tasty-quickcheck  >=0.10.0.0 && <0.11
     , vector            >=0.12.0.0 && <0.13
+    , deepseq         >=1.1.0.0 && <1.5.0.0
