--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@
 TAGS
 dist-newstyle
 src/verifier/contracts/artifacts/
+src/newProver/bin
+src/newProver/lib
+src/newProver/lib64
+src/newProver/pyvenv.cfg
+output/polys4.txt
+output/polys8.txt
+output/polys16.txt
+output/polys32.txt
+output/polys64.txt
+output/polys128.txt
+src/newProver/tXY_4.txt
+src/newProver/tXY_8.txt
+src/newProver/tXY_16.txt
+src/newProver/tXY_32.txt
+src/newProver/tXY_64.txt
+src/newProver/tXY_128.txt
+
+
